<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="options">Настройки</string>
    <string name="is_dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="message_sup">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_dialog_title">Поделиться через:</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_email">satina.07@mail.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="update">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="remove_history">Очистить историю</string>
    <string name="favorites_is_empty">Ваша медиатека пуста</string>
    <string name="users_playlists_is_empty">Вы не создали \nни одного плейлиста</string>
    <string name="durations">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="GenreName">Жанр</string>
    <string name="Country">Страна</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="favorites_track">Избранные треки</string>
    <string name="Playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="finish_create_playlist">Завершить создание плейлиста?</string>
    <string name="warning_save">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
</resources>