<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_main"
    android:padding="@dimen/padding_small"
    android:orientation="vertical">
<TextView
    style="@style/HeaderText"
    android:text="@string/app_name"
    android:textColor="@color/white"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_icon_padding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="@dimen/margin_small">
        <Button
            style="@style/MainButton"
            android:id="@+id/search_btn"
            app:icon="@drawable/search_ic"
            android:text="@string/search"/>

        <Button
            style="@style/MainButton"
            android:id="@+id/media_btn"
            android:layout_marginTop="@dimen/margin_between_buttons"
            app:icon="@drawable/media_ic"
            android:text="@string/media"/>

        <Button
            style="@style/MainButton"
            android:id="@+id/settings_btn"
            android:layout_marginTop="@dimen/margin_between_buttons"
            app:icon="@drawable/settings_ic"
            android:text="@string/options"/>
    </LinearLayout>
</LinearLayout>