<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrounds"
    tools:context=".AudioPlayer">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/backbar"
        style="@style/AppToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/album_cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:src="@drawable/placeholder_audioplayer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/song"
                style="@style/HeaderText"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                android:text="songsongsong"
                android:textFontWeight="400"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album_cover" />

            <TextView
                android:id="@+id/singer"
                style="@style/HeaderText"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_small"
                android:text="singer"
                android:textFontWeight="400"
                android:textSize="@dimen/text_button_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/song" />

            <ImageButton
                android:id="@+id/playlist_btn"
                style="@style/SimpleImageBtn"
                android:layout_marginTop="@dimen/big_margin"
                android:src="@drawable/playlist_ic"
                app:layout_constraintEnd_toStartOf="@id/play_btn"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/singer" />

            <ImageButton
                android:id="@+id/play_btn"
                style="@style/SimpleImageBtn"
                android:layout_marginTop="38dp"
                android:src="@drawable/play_song_ic"
                app:layout_constraintBottom_toBottomOf="@id/playlist_btn"
                app:layout_constraintEnd_toStartOf="@id/like_btn"
                app:layout_constraintStart_toEndOf="@id/playlist_btn"
                app:layout_constraintTop_toBottomOf="@id/singer" />

            <ImageButton
                android:id="@+id/like_btn"
                style="@style/SimpleImageBtn"
                android:layout_marginTop="@dimen/big_margin"
                android:src="@drawable/like_ic"
                app:layout_constraintBottom_toBottomOf="@id/playlist_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/play_btn"
                app:layout_constraintTop_toBottomOf="@id/singer" />

            <TextView
                android:id="@+id/timer_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:fontFamily="@font/ys_display_medium"
                android:text="00:00"
                android:textColor="@color/text"
                android:textFontWeight="500"
                android:textSize="@dimen/text_button_small"
                app:layout_constraintEnd_toEndOf="@id/play_btn"
                app:layout_constraintStart_toStartOf="@id/play_btn"
                app:layout_constraintTop_toBottomOf="@id/play_btn" />

            <TextView
                android:id="@+id/duration"
                style="@style/GrayTextPlayer"
                android:text="@string/durations"
                app:layout_constraintBaseline_toBaselineOf="@id/full_time"
                app:layout_constraintEnd_toStartOf="@id/full_time"
                app:layout_constraintTop_toBottomOf="@id/timer_song" />

            <TextView
                android:id="@+id/full_time"
                style="@style/TextAudioPlayer"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginTop="9dp"
                android:text="elfelff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/duration"
                app:layout_constraintTop_toBottomOf="@id/timer_song" />

            <TextView
                android:id="@+id/collection"
                style="@style/GrayTextPlayer"
                android:text="@string/album"
                app:layout_constraintBaseline_toBaselineOf="@id/collection_name"
                app:layout_constraintEnd_toStartOf="@id/collection_name"
                app:layout_constraintTop_toBottomOf="@id/duration" />

            <TextView
                android:id="@+id/collection_name"
                style="@style/TextAudioPlayer"
                android:text="elfff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/collection"
                app:layout_constraintTop_toBottomOf="@id/duration" />

            <TextView
                android:id="@+id/year"
                style="@style/GrayTextPlayer"
                android:text="@string/year"
                app:layout_constraintBaseline_toBaselineOf="@id/track_year"
                app:layout_constraintEnd_toStartOf="@id/track_year"
                app:layout_constraintTop_toBottomOf="@id/collection" />

            <TextView
                android:id="@+id/track_year"
                style="@style/TextAudioPlayer"
                android:text="elfff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/year"
                app:layout_constraintTop_toBottomOf="@id/collection" />

            <TextView
                android:id="@+id/genre"
                style="@style/GrayTextPlayer"
                android:text="@string/GenreName"
                app:layout_constraintBaseline_toBaselineOf="@id/track_genre"
                app:layout_constraintEnd_toStartOf="@id/track_genre"
                app:layout_constraintTop_toBottomOf="@id/year" />

            <TextView
                android:id="@+id/track_genre"
                style="@style/TextAudioPlayer"
                android:layout_marginBottom="@dimen/margin_8"
                android:text="elfff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/genre"
                app:layout_constraintTop_toBottomOf="@id/year" />

            <TextView
                android:id="@+id/country"
                style="@style/GrayTextPlayer"
                android:text="@string/Country"
                app:layout_constraintBaseline_toBaselineOf="@id/track_country"
                app:layout_constraintEnd_toStartOf="@id/track_country"
                app:layout_constraintTop_toBottomOf="@id/genre" />

            <TextView
                android:id="@+id/track_country"
                style="@style/TextAudioPlayer"
                android:text="elfff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/country"
                app:layout_constraintTop_toBottomOf="@id/genre" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>