<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/backbar"
        style="@style/AppToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_ic"
        app:navigationIconTint="@color/black" />

        <ImageView
            android:id="@+id/album_cover"
            android:layout_width="@dimen/cover_image_big"
            android:layout_height="@dimen/cover_image_big"
            android:layout_marginTop="@dimen/margin_24"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_audioplayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backbar" />

        <TextView
            android:id="@+id/playlist_name"
            style="@style/TextPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_24"
            android:textFontWeight="400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_cover" />

        <TextView
            android:id="@+id/playlist_description"
            style="@style/TextPlaylistSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_name" />

        <LinearLayout
            android:id="@+id/playlist_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_description">

            <TextView
                android:id="@+id/playlist_duration"
                style="@style/TextPlaylistSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <TextView
                android:id="@+id/count_tracks"
                style="@style/TextPlaylistSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:drawableStart="@drawable/ic_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/playlist_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_settings_item"
            android:layout_marginTop="@dimen/margin_playlist_buttons"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_stats">

            <ImageView
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_ic_black" />

            <ImageView
                android:id="@+id/moreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:src="@drawable/more_ic" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/tracks_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/rectangle_bottom" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="16dp" />
    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:background="#80000000"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlist_menu_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_8"
            android:src="@drawable/rectangle_bottom" />

        <include
            android:id="@+id/currentPlaylistCard"
            layout="@layout/item_playlist_mini" />

        <TextView
            android:id="@+id/sharePlaylistButton"
            style="@style/TextDescription"
            android:text="@string/share" />
        <TextView
            android:id="@+id/editPlaylistButton"
            style="@style/TextDescription"
            android:text="@string/edit_info" />
        <TextView
            android:id="@+id/deletePlaylistButton"
            style="@style/TextDescription"
            android:layout_marginBottom="107dp"
            android:text="@string/delete_playlist" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>